Styles working in design view but not Chrome

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -13,6 +13,7 @@ h2 {
     font-size: 140%;
     padding: 0;
     margin-bottom: .5em;
+    text-align:center;
 }
 .cpHead{
     text-align: center;
