--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,11 +1,11 @@
 ﻿/* The styles for the elements */
-abody {
+body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 85%;
-    width: 550px;
+    width: 520px;
     margin: 0 auto;
     padding: 10px;
-    background-color: blue;
+    background-color: antiquewhite;
     border: 2px solid #0000FF;
 }
 h2 {
@@ -15,11 +15,22 @@ h2 {
     margin-bottom: .5em;
     text-align:center;
 }
+h1 {
+    color: orangered;
+    font-size: 140%;
+    padding: 0;
+    margin-bottom: .5em;
+    text-align:center;
+}
+.boxed{
+	border: 3px solid white;
+	width: 520px;
+}
 .cpHead{
     text-align: center;
     color: red;
 }
-Content1{
+Content2{
     text-align: center;
 }
 MainContent{
