--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -2,11 +2,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 85%;
-    width: 380px;
+    width: 360px;
     margin: 0 auto;
     padding: 10px;
     background-color: antiquewhite;
     border: 2px solid #0000FF;
+    
 }
 h2 {
     color: #0000FF;
@@ -24,26 +25,20 @@ h1 {
 }
 .boxed{
 	border: 3px solid orangered;
-	width: 370px;
+	width: 350px;
 }
 #table1 {
   border: solid thin black;
 }
 
 #table1 td {
-  border: solid thin black;
+  border: solid thin white;
 }
-.cpHead{
-    text-align: center;
-    color: red;
+#table1 th{
+  border: solid thick white;
 }
-Content2{
-    text-align: center;
+#userPrompts{
+    
 }
-MainContent{
-    text-align: center;
-}
-#header{
-    text-align: center;
-}
+
 
